--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,40 @@
 .App {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-size: 16px;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+.todo {
   text-align: center;
+  color: #007762;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+.text-box {
+  width: 35vw;
+  height: 7vh;
+  border: 1px solid gray;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin: 0 auto;
 }
 
-.App-link {
-  color: #61dafb;
+.add {
+  margin-top: 2rem;
+  margin-left: 28rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.input {
+  border: none;
+  border-bottom: 2px solid #007762;
+  width: 35vw;
+  height: 4vh;
+  padding: 0.5rem;
+  margin-left: 28rem;
+}
+
+.input-field {
+  border: none;
+  outline: none;
 }
