--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,12 @@
-.App {
+html,
+body {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
   font-size: 16px;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  background-color: lightgray;
 }
 
 .todo {
@@ -12,23 +14,27 @@
   color: #007762;
 }
 
-.text-box {
-  width: 35vw;
-  height: 7vh;
-  border: 1px solid gray;
-  align-items: center;
-  margin: 0 auto;
+.add {
+  font-size: 11px;
+  margin-top: 1.5rem;
+  margin-left: 28rem;
+  color: gray;
 }
 
-.add {
-  margin-top: 2rem;
+.input1 {
+  border: none;
+  width: 30vw;
+  height: 4vh;
+  padding: 0.5rem;
   margin-left: 28rem;
+  background: #ffffff;
+  box-shadow: 0px 2px 0px rgba(0, 0, 0, 0.1);
 }
 
 .input {
   border: none;
   border-bottom: 2px solid #007762;
-  width: 35vw;
+  width: 30vw;
   height: 4vh;
   padding: 0.5rem;
   margin-left: 28rem;
