--- a/src/App.css
+++ b/src/App.css
@@ -10,37 +10,62 @@ body {
 }
 
 .todo {
+  font-size: 2rem;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 300;
   text-align: center;
   color: #007762;
 }
 
 .add {
   font-size: 11px;
-  margin-top: 1.5rem;
+  margin-top: 1.2rem;
   margin-left: 28rem;
   color: gray;
 }
 
 .input1 {
+  border-top: 1px solid lightgray;
   border: none;
-  width: 30vw;
-  height: 4vh;
+  width: 35vw;
+  height: 3.5vh;
   padding: 0.5rem;
   margin-left: 28rem;
   background: #ffffff;
   box-shadow: 0px 2px 0px rgba(0, 0, 0, 0.1);
 }
 
+.field {
+  border-bottom: 1px solid lightgray;
+}
+
 .input {
   border: none;
   border-bottom: 2px solid #007762;
-  width: 30vw;
-  height: 4vh;
-  padding: 0.5rem;
+  width: 35.6vw;
+  height: 3.5vh;
+  padding: 0.2rem;
   margin-left: 28rem;
 }
 
 .input-field {
+  flex: none;
+  order: 1;
+  flex-grow: 0;
+  margin: 0px 1px;
   border: none;
   outline: none;
+}
+
+.bin {
+  margin-left: 17rem;
+  height: 1rem;
+  width: 1rem;
+  cursor: pointer;
+}
+
+.task {
+  border: none;
+  outline: none;
+  background-color: lightgray;
 }
